--- a/installer/locale/es.po
+++ b/installer/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ecere\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-03-19 01:00+0000\n"
-"PO-Revision-Date: 2014-03-19 00:04-0500\n"
+"PO-Revision-Date: 2014-08-07 00:46-0500\n"
 "Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -362,7 +362,7 @@ msgid "Req. Space"
 msgstr "Espacio Req."
 
 #: src/installer.ec:1711
-msgid "Resgistering File Types..."
+msgid "Registering File Types..."
 msgstr "Registrando Tipos de Archivos..."
 
 #: src/installer.ec:285 src/installer.ec:286
