NEWS: Added notes for 0.44.11 release (bug fixes)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Ecere SDK 0.44.11 (February 16, 2015)
+
+   * Bug fix release
+   * Fixed crash on writing initial config file on Linux		
+
 Ecere SDK 0.44.10 (August 7, 2014)
 
    * Compiler fixes and optimizations
