--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ecere-sdk (0.44.11-1) unstable; urgency=low
+
+   * Packaged Ecere SDK 0.44.11 (Bug fix release)
+   * Fixed crash on writing initial config file on Linux
+
+ -- Jerome St-Louis <jerstlouis@gmail.com>  Mon, 16 Feb 2015 19:33:00 -0500
+
 ecere-sdk (0.44.10-1) unstable; urgency=low
 
    * Closes: #749822 #750066 #750068
