--- a/ecere/locale/zh_CN.po
+++ b/ecere/locale/zh_CN.po
@@ -3,19 +3,19 @@ msgstr ""
 "Project-Id-Version: ecere\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-18 21:22+0000\n"
-"PO-Revision-Date: 2014-03-19 00:03-0500\n"
+"PO-Revision-Date: 2016-01-11 23:11-0500\n"
 "Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: ec <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2014-03-19 03:16+0000\n"
-"X-Generator: Poedit 1.6.4\n"
+"X-Generator: Poedit 1.8.6\n"
 "Language: zh_CN\n"
-"X-Poedit-Basepath: ..\\..\\..\n"
+"X-Poedit-Basepath: ../../..\n"
 
 #: src/gui/dialogs/ReplaceDialog.ec:158 src/gui/dialogs/ReplaceDialog.ec:355
-msgid "%d occurences found, %d replaced"
+msgid "%d occurrences found, %d replaced"
 msgstr "找到%d个匹配项, %d已替换"
 
 #: src/gui/dialogs/FileDialog.ec:885
