--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Ecere SDK 0.44.14 (January 13, 2016)
+
+   * Compiler: Fixed generating __extension__ expression with mismatched parentheses
+   * Addressed build reproducibility issues
+   * Documentor: Minor fixes
+   * Spelling fixes
+   * GUI/ListBox: Fixed clearing cell data
+----------------------------------------
 Ecere SDK 0.44.13 (December 22, 2015)
 
    * Bug fix / Support release
