--- a/share/man/man1/ecere-ide.1
+++ b/share/man/man1/ecere-ide.1
@@ -1,13 +1,13 @@
-.TH IDE "1" "August 2012" "ide" "Ecere SDK/Integrated Development Environment"
+.TH ECERE-IDE "1" "August 2016" "ecere-ide" "Ecere SDK/Integrated Development Environment"
 .SH NAME
-ide \- Ecere IDE
+ecere-ide \- Ecere IDE
 .SH SYNOPSIS
 .IX
-ide [\fIproject\fR] [\fIfiles\fR]*
+ecere-ide [\fIproject\fR] [\fIfiles\fR]*
 .SH DESCRIPTION
 Launches the Ecere Integrated Environment.
 
 A \fIproject\fR (\fB.epj\fR) and/or \fIfiles\fR to be opened on startup can be specified on the command line.
 
 .SH SETTINGS
-Settings for the IDE are stored in ~/.ecereIDErc
+Settings for the IDE are stored in ~/.ecereIDE/
